Fix lateral spacing on secondary-menu

--- a/version_control/Codurance_September2020/css/modules/secondary-menu.css
+++ b/version_control/Codurance_September2020/css/modules/secondary-menu.css
@@ -27,6 +27,11 @@
   margin-inline: auto;
 }
 
+.secondary-menu .lateral-spacing {
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
 {% call utils.small() %}
   .secondary-menu ul {
     flex-direction: column;
